图片轮播起的实现 加入 tableview

--- a/CarouselPicture/CarouselPicture/Base.lproj/Main.storyboard
+++ b/CarouselPicture/CarouselPicture/Base.lproj/Main.storyboard
@@ -7,7 +7,6 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
@@ -31,16 +30,24 @@
                                 <color key="pageIndicatorTintColor" red="0.91372555489999996" green="0.99215692280000001" blue="0.87843143940000001" alpha="1" colorSpace="deviceRGB"/>
                                 <color key="currentPageIndicatorTintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </pageControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SEg-mC-Yda">
+                                <rect key="frame" x="0.0" y="150" width="600" height="450"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="bJw-ZB-InK" secondAttribute="trailing" id="4nk-sV-ILQ"/>
+                            <constraint firstAttribute="trailing" secondItem="SEg-mC-Yda" secondAttribute="trailing" id="8Uz-Dn-jal"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="SEg-mC-Yda" secondAttribute="bottom" id="GV4-Mm-IUc"/>
                             <constraint firstItem="bJw-ZB-InK" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="130" id="GaJ-j0-Yr0"/>
                             <constraint firstItem="bJw-ZB-InK" firstAttribute="top" secondItem="neq-RE-0FK" secondAttribute="bottom" constant="110" id="O0Q-mB-PwB"/>
                             <constraint firstAttribute="trailing" secondItem="neq-RE-0FK" secondAttribute="trailing" id="RPM-Qd-XQn"/>
                             <constraint firstItem="bJw-ZB-InK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gIl-4c-kqB"/>
                             <constraint firstItem="neq-RE-0FK" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="gtI-wm-XUN"/>
                             <constraint firstItem="neq-RE-0FK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hIq-Oa-hnd"/>
+                            <constraint firstItem="SEg-mC-Yda" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="rw7-so-hOt"/>
+                            <constraint firstItem="SEg-mC-Yda" firstAttribute="top" secondItem="neq-RE-0FK" secondAttribute="bottom" id="vgQ-kL-gW0"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -51,8 +58,10 @@
                     <connections>
                         <outlet property="pageController" destination="bJw-ZB-InK" id="YYg-lc-2nj"/>
                         <outlet property="scrollerView" destination="neq-RE-0FK" id="ynW-yi-ryi"/>
+                        <outlet property="tableView" destination="SEg-mC-Yda" id="hSJ-5F-q92"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="224" y="209"/>
         </scene>
